@@ -1,7 +1,7 @@
 package namelessju.scathapro.gui.overlay.elements;
 
 import net.minecraft.client.DeltaTracker;
-import net.minecraft.client.gui.GuiGraphics;
+import net.minecraft.client.gui.GuiGraphicsExtractor;
 import net.minecraft.util.Mth;
 
 public class OverlayProgressBar extends OverlayElement
@@ -23,7 +23,7 @@ public class OverlayProgressBar extends OverlayElement
     }
 
     @Override
-    protected void renderContent(GuiGraphics guiGraphics, DeltaTracker deltaTracker)
+    protected void extractContent(GuiGraphicsExtractor guiGraphics, DeltaTracker deltaTracker)
     {
         if (backgroundColor >= 0) guiGraphics.fill(0, 0, width, height, backgroundColor);
         if (foregroundColor >= 0) guiGraphics.fill(0, 0, Mth.floor(width * progress), height, foregroundColor);
@@ -43,6 +43,6 @@ public class OverlayProgressBar extends OverlayElement
     
     public void setProgress(float progress)
     {
-        this.progress = Math.min(Math.max(progress, 0f), 1f); 
+        this.progress = Math.clamp(progress, 0f, 1f);
     }
 }
